edit button functional (does not actually edit

--- a/PhotoJournalApp/Supporting Files/Base.lproj/Main.storyboard
+++ b/PhotoJournalApp/Supporting Files/Base.lproj/Main.storyboard
@@ -118,7 +118,7 @@
         <!--Upload Post Controller-->
         <scene sceneID="r2p-1K-2oK">
             <objects>
-                <viewController storyboardIdentifier="UploadPostController" id="6K0-Jp-Aea" customClass="UploadPostController" customModule="PhotoJournalApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController restorationIdentifier="UploadPostController" storyboardIdentifier="UploadPostController" id="6K0-Jp-Aea" customClass="UploadPostController" customModule="PhotoJournalApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ycl-AX-s70">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
